# rask

./: .codecov.yml  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  design-doc.md  design-doc.txt  dev-diary.txt  docker-compose-test.yaml  docker-compose.yaml  requests.http  wishlist.txt
.aws/: rask_api_task_definition.json
.github/workflows/: cargo_tarpaulin.yml  cargo_test.yml  main.yml  test_hash_files.yaml
rask_api/: Cargo.toml  Rocket.toml
rask_api/migrations/2021-07-15-040912_create_task/: down.sql
rask_api/migrations/2021-07-24-230057_task_add_project_column/: down.sql  up.sql
rask_api/migrations/2021-07-25-183639_task_due_date/: up.sql
rask_api/src/: db.rs  db_queries.rs  endpoints.rs  form.rs  lib.rs  main.rs  models.rs  schema.rs  token.rs
rask_api/tests/: integration_test.rs
rask_cli/: Cargo.toml
rask_cli/src/: args.rs  lib.rs  main.rs
rask_cli/tests/: integration_test.rs
rask_lib/: Cargo.toml
rask_lib/migrations/2021-07-15-040912_create_task/: up.sql
rask_lib/migrations/2021-07-23-034459_task_add_completed_column/: down.sql  up.sql
rask_lib/migrations/2021-07-24-230057_task_add_project_column/: down.sql
rask_lib/migrations/2021-07-25-164336_task_add_priority_column/: up.sql
rask_lib/migrations/2021-07-25-183639_task_due_date/: down.sql
rask_lib/migrations/2021-08-02-023741_add_apitoken_table/: down.sql  up.sql
rask_lib/migrations/2021-08-15-205825_task_created/: down.sql  up.sql
rask_lib/migrations/2021-08-15-211452_task_due_date/: down.sql  up.sql
rask_lib/migrations/2021-08-15-224643_recurrence_template/: down.sql  up.sql
rask_lib/src/: lib.rs  models.rs  schema.rs  testing.rs
tools/: install
