[package]
edition = "2018"
name = "rask_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
thiserror = "1.0"

[dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_postgres_pool"]
version = "0.1.0-rc.1"
