[package]
edition = "2018"
name = "rask_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO see which deps are still necessary now that some functionality has been split out to rask_lib
chrono = { version = "0.4", features = ["serde"]}
diesel = {version = "1.4.4", features = ["postgres", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_urlencoded = "0.7"
thiserror = "1.0"
rask_lib = { path = "../rask_lib" }


[dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_postgres_pool"]
version = "0.1.0-rc.1"
