[package]
name = "rask_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rask_lib = { path = "../rask_lib" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
clap = "3.0.0-beta.4"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde = {version = "1.0.130"}
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
diesel = {version = "1.4.8", features = ["postgres", "chrono"]}
regex = "1"