[package]
name = "rask_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
diesel = {version = "2.0.2", features = ["postgres", "chrono"]}
serde = {version = "1.0.130", features = ["derive"]}